--- a/taskmanager/templates/includes/header.html
+++ b/taskmanager/templates/includes/header.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'projects' %}">Проекты</a>
+            <a class="nav-link" href="{% url 'projects_create' %}">Проекты</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'performers' %}">Исполнители</a>
