--- a/taskmanager/templates/tasks/performers.html
+++ b/taskmanager/templates/tasks/performers.html
@@ -9,7 +9,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">{{ performer.username }}</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">{{ performer.email}}</h6>
+            <h6 class="card-subtitle mb-2 text-body-secondary">{{ performer.email }}</h6>
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
             <h5 class="card-title">Еще нет исполнителей</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Если вы работаете один, то вы либо дурак, либо сверхчеловек</h6>
             <p class="card-text">Каждой задаче требуется ответственный исполнитель, иначе она просто не будет выполняться</p>
-            <a href="#" class="card-link">Создать исполнителя</a>
+            <a href="{% url 'performers_create' %}" class="card-link">Создать исполнителя</a>
           </div>
         </div>
       </div>
